# Practical-Works-Machine-Learning

./: README.md
Computer Vision/: BIGEARD_TP1.ipynb  BIGEARD_TP2.ipynb  SPATIAL_TRANSFORMER_NETWORKS_BIGEARD.ipynb
Constraint programming/: Procedure de decision simple BIGEARD.ipynb  README.md  TP2_bigeard.ipynb  sudoku_solver.py
Deep learning/: Bigeard_Jean_Jules_Lab_keras_imdb_students.ipynb  Bigeard_Jean_Jules_MLP_1.ipynb  Bigeard_Jean_Jules_MLP_2.ipynb  tp_deep_learning_cnn_intro_tensorflow.ipynb  tp_deep_learning_cnn_part_1_Bigeard_Jean_jules.ipynb  tp_deep_learning_cnn_part_2_Bigeard_Jean_jules.ipynb
GPU programming with CUDA/: CUBLAS_backprop.ipynb  classification_cuda.ipynb  matmul_Bigeard.ipynb  reduction_Bigeard.ipynb
Generative models and domain adaptation/: pytorchVAEMNIST .ipynb
Graphical Models and Bayesian Networks/: TP - RBM.ipynb
Large_scale_learning/: TP1_avazu_Bigeard_Jean_Jules.ipynb  lab1_guegan_julien_and_bigeard_jean-jules.ipynb  lab_sketching.ipynb  lab_tree_search.ipynb
Learning for robotics/: K_Means _Digits.ipynb  ROB311 TP1 - BIGEARD JEAN-JULES.ipynb  TP4_ROB311_Bigeard_Jean_Jules.ipynb
Logic/: Coral_Reef_Jean_Jules_Bigeard_Tine_Rey.owl  MIRO  Ontology  coral_reef
Multimodal Dialogue/: DTW.ipynb  TP_Laban_corr.ipynb
NLP/: Bigeard_jean_jules.ipynb  HMM.ipynb  LSTM_Pytorch.ipynb
ROB_311/: ROB311 TP1 - BIGEARD JEAN-JULES.ipynb
ROS tutorials/Topics Services and Actions/Publish velocity/: CMakeLists.txt  package.xml
ROS tutorials/Topics Services and Actions/Read odometry/: package.xml
Statistical learning/: PCA_vizu.ipynb  (+10 more)
(+119 files in other folders)
